apps/zahori-server/overlays/dev/deployment_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zahori
  name: zahori
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zahori
  strategy: {}
  template:
    metadata:
      labels:
        app: zahori
    spec:
      containers:
        - name: zahori
          image: zahoriaut/zahori-server
          ports:
            - containerPort: 9090
          imagePullPolicy: Always
