apps/zahori-server/overlays/dev/memorylimit_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: zahori
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: zahori
          resources:
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "500Mi"
              cpu: "1000m"
