apps/zahori-server/overlays/dev/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`server.test`) && PathPrefix(`/zahori`)
      kind: Rule
      services:
        - name: openzahori-zahori
          port: 9090
